--- a/zcblog-front2client/package.json
+++ b/zcblog-front2client/package.json
@@ -10,9 +10,11 @@
     "lint:style": "stylelint src/**/*.{vue,css,styl} --custom-syntax stylelint-plugin-stylus/custom-syntax"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.21.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
