--- a/zcblog-front2client/.env
+++ b/zcblog-front2client/.env
@@ -1,5 +1,5 @@
 // serve 默认的本地开发环境配置
 NODE_ENV = "development"
-BASE_URL = "./"
-// VUE_APP_PUBLIC_PATH = "./"
-// VUE_APP_API = "https://test.zcblog.com/api"
+BASE_URL = "http://localhost:8080/"
+VUE_APP_API = "http://localhost:8080/api"
+VUE_APP_PUBLIC_PATH = "./"
