--- a/zcblog-front2client/.env
+++ b/zcblog-front2client/.env
@@ -2,4 +2,4 @@
 NODE_ENV = "development"
 BASE_URL = "http://localhost:8080/"
 VUE_APP_API = "http://localhost:8080/api"
-VUE_APP_PUBLIC_PATH = "./"
+VUE_APP_PUBLIC_PATH = "/"
