--- a/zcblog-front2client/package.json
+++ b/zcblog-front2client/package.json
@@ -39,6 +39,7 @@
     "stylelint-plugin-stylus": "^0.9.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-dev-server": "^2.6.1"
   }
 }
