--- a/zcblog-front2client/.env.crm
+++ b/zcblog-front2client/.env.crm
@@ -9,3 +9,7 @@ NODE_ENV = "production"
 // REGION = "oss-cn-hangzhou"
 // BUCKET = "zcblog-crm"
 // PREFIX = "zc-blog"
+
+// 配置Valine评论系统
+VUE_APP_Valine_APPID = "z0GnFIFva6YrfBpFL8Uy8BTP-gzGzoHsz"
+VUE_APP_Valine_APPKEY = "wOR9EzOL58zIkUBQS2LTGKIg"
