--- a/zcblog-backend/zcblog-core/pom.xml
+++ b/zcblog-backend/zcblog-core/pom.xml
@@ -122,5 +122,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+        <!--使用devtools工具实现项目热部署-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+        </dependency>
     </dependencies>
 </project>
