--- a/zcblog-front2manage/package.json
+++ b/zcblog-front2manage/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.14.0",
+    "lodash": "^4.17.20",
+    "marked": "^1.2.3",
+    "mavon-editor": "^2.9.0",
     "vue": "^2.6.11",
+    "vue-cookie": "^1.1.4",
+    "vue-count-to": "^1.0.13",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -27,8 +35,13 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
+    "sass": "^1.28.0",
+    "sass-loader": "^10.0.5",
+    "stylelint": "^13.7.2",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-webpack-plugin": "^2.1.1",
+    "svg-sprite-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
