--- a/zcblog-front2client/.env.crm
+++ b/zcblog-front2client/.env.crm
@@ -1,8 +1,8 @@
 // 自定义 build 环境配置（预发服务器）
 NODE_ENV = "production"
-// BASE_URL = "https://crm.zcblog.com/"
-// VUE_APP_PUBLIC_PATH = "https://crm.oss.com/zcblog"
-// VUE_APP_API = "https://crm.zcblog.com/api"
+// BASE_URL = "http://crm.progzc.com/"
+// VUE_APP_PUBLIC_PATH = "https://crm.oss.com/blog"
+// VUE_APP_API = "http://crm.progzc.com/api"
 
 // ACCESS_KEY_ID = "xxxxxxxxxxxxx"
 // ACCESS_KEY_SECRET = "xxxxxxxxxxxxx"
