--- a/zcblog-front2client/.env.production
+++ b/zcblog-front2client/.env.production
@@ -1,8 +1,8 @@
 // build 默认的环境配置（正式服务器）
 NODE_ENV = "production"
-// BASE_URL = "https://prod.zcblog.com/"
-// VUE_APP_API = "https://prod.zcblog.com/api"
-// VUE_APP_PUBLIC_PATH = "https://prod.oss.com/zcblog"
+// BASE_URL = "http://www.progzc.com/"
+// VUE_APP_API = "http://www.progzc.com/api"
+// VUE_APP_PUBLIC_PATH = "http://www.progzc.com/blog"
 
 // ACCESS_KEY_ID = "xxxxxxxxxxxxx"
 // ACCESS_KEY_SECRET = "xxxxxxxxxxxxx"
