--- a/zcblog-front2manage/.env
+++ b/zcblog-front2manage/.env
@@ -1,7 +1,7 @@
 // serve 默认的本地开发环境配置
 NODE_ENV = "development"
-BASE_URL = "http://localhost:8081/"
-VUE_APP_API = "http://localhost:8081/api"
+BASE_URL = "http://127.0.0.1:8083/"
+VUE_APP_API = "http://127.0.0.1:8083/api"
 VUE_APP_PUBLIC_PATH = "/"
 // 配置Valine评论系统
 // VUE_APP_Valine_APPID = "z0GnFIFva6YrfBpFL8Uy8BTP-gzGzoHsz"
