'完成AES加密传输'

--- a/zcblog-front2manage/.env
+++ b/zcblog-front2manage/.env
@@ -1,6 +1,6 @@
 // serve 默认的本地开发环境配置
 NODE_ENV = "development"
-BASE_URL = "http://127.0.0.1:8083/"
+BASE_URL = "/"
 VUE_APP_API = "http://127.0.0.1:8083/api"
 VUE_APP_PUBLIC_PATH = "/"
 // 配置Valine评论系统
