--- a/zcblog-front2manage/.env.crm
+++ b/zcblog-front2manage/.env.crm
@@ -1,6 +1,6 @@
 // 自定义 build 环境配置（预发服务器）
 NODE_ENV = "production"
-// BASE_URL = "http://crm.progzc.com/"
+// BASE_URL = "/"
 // VUE_APP_PUBLIC_PATH = "https://crm.oss.com/blog"
 // VUE_APP_API = "http://crm.progzc.com/api"
 
