--- a/zcblog-front2manage/.env.production
+++ b/zcblog-front2manage/.env.production
@@ -1,6 +1,6 @@
 // build 默认的环境配置（正式服务器）
 NODE_ENV = "production"
-// BASE_URL = "http://www.progzc.com/"
+// BASE_URL = "/"
 // VUE_APP_API = "http://www.progzc.com/api"
 // VUE_APP_PUBLIC_PATH = "http://www.progzc.com/blog"
 
