--- a/zcblog-front2manage/package.json
+++ b/zcblog-front2manage/package.json
@@ -8,13 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "D": "^1.0.0",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "echarts": "^4.9.0",
-    "element-ui": "^2.14.0",
-    "i": "^0.3.6",
+    "element-ui": "^2.3.2",
     "lodash": "^4.17.20",
     "marked": "^1.2.3",
     "mavon-editor": "^2.9.0",
@@ -38,8 +36,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.28.0",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.1.0",
+    "style-resources-loader": "^1.4.1",
     "stylelint": "^13.7.2",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
