'配置Spring缓存存储到Redis中'./application.yml

--- a/zcblog-backend/zcblog-core/src/main/resources/application.yml
+++ b/zcblog-backend/zcblog-core/src/main/resources/application.yml
@@ -39,6 +39,9 @@ spring:
   devtools:
     restart:
       enabled: true # 配置项目进行热部署
+  cache:
+    type: redis
+    cache-names: ZCBLOG:ARTICLE,ZCBLOG:GALLERY,ZCBLOG:TAG
 # MyBatisPlus配置
 mybatis-plus:
   mapper-locations: classpath:mapper/**/*.xml # 指定mapper文件位置
@@ -54,3 +57,4 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true # 驼峰下划线自动转换
     cache-enabled: false # 不开启二级缓存
+
