'解决前后台时差8h的Bug'

--- a/zcblog-backend/zcblog-core/src/main/resources/application-dev.yml
+++ b/zcblog-backend/zcblog-core/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver  # 使用MySQL数据库
     druid:
       # 配置数据库连接地址并进行相关设置（允许进行批处理、使用utf-8字符集、不进行SSL连接、使用格林威治时间）
-      url: jdbc:mysql://localhost:3306/zcblog?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT
+      url: jdbc:mysql://localhost:3306/zcblog?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=GMT%2b8
       username: root  # 数据库用户名
       password: root  # 数据库密码
       initial-size: 10  # 初始连接数10个
