--- a/zcblog-front2manage/package.json
+++ b/zcblog-front2manage/package.json
@@ -30,6 +30,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "copy-webpack-plugin": "^6.3.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
